# feature_extraction_pkg

./: LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  example_proteins.fasta  example_usage.py  pyproject.toml  setup.py  test_installation.py  unified_extractor.py
Features_Extraction/: FeaturesExtractionModule.py  extract_esm.py  utils.py
protein_feature_extraction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
