[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-feature-extraction"
version = "1.0.0"
description = "A comprehensive package for extracting 9 types of protein features from FASTA files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Feature Extraction Team"},
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.19.0",
    "biopython>=1.78",
    "scipy>=1.5.0",
    "gensim>=4.0.0",
    "torch>=1.9.0",
    "fair-esm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
"Bug Tracker" = "https://github.com/yourusername/protein-feature-extraction/issues"
"Documentation" = "https://github.com/yourusername/protein-feature-extraction/wiki"
"Source Code" = "https://github.com/yourusername/protein-feature-extraction"
